fix the text overlaping

--- a/assets/css/smallscreen.css
+++ b/assets/css/smallscreen.css
@@ -1390,6 +1390,35 @@ nav {
 
   .hero p {
     font-size: 24.3px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 9;
+    line-clamp: 9;
+    -webkit-box-orient: vertical;
+  }
+
+  .work-card-body h1 {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 44px;
+    padding-top: 100px;
+    color: #fff;
+    margin-bottom: 20px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+
+
+  .work-description {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
   }
 }
 
